--- a/index.html
+++ b/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./main.css">
   <title>Frontend Mentor | Order summary card</title>
 </head>
+
 <body>
 
-  Order Summary
+  <div class="order">
+    <div class="order__hero"></div>
+    <div class="order__info">
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+      <h1 class="order__info__title">Order Summary</h1>
 
-  Annual Plan
-  $59.99/year
+      <p class="order__info__description">
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
 
-  Change
+      <div class="order__info__card">
+        <div class="order__info__card__icon"></div>
 
-  Proceed to Payment
-  Cancel Order
-  
+        <p>Annual Plan</p>
+        <p>$59.99/year</p>
+
+        <button class="order__info__card__btn">Change</button>
+      </div>
+
+      <div class="order__info__actions">
+        <button class="order__info__actions__btn--submit">
+          Proceed to Payment
+        </button>
+        <button class="order__info__actions__btn--cancel">
+          Cancel Order
+        </button>
+      </div>
+    </div>
+  </div>
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/alex-castelo" target="_blank">Àlex Castelo Martínez</a>.
   </div>
 </body>
+
 </html>
