--- a/index.html
+++ b/index.html
@@ -12,42 +12,46 @@
 </head>
 
 <body>
+  <div class="content">
 
-  <div class="order">
-    <div class="order__hero"></div>
-    <div class="order__info">
+    <div class="order">
+      <div class="order__hero">
 
-      <h1 class="order__info__title">Order Summary</h1>
-
-      <p class="order__info__description">
-        You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!
-      </p>
-
-      <div class="order__info__card">
-        <div class="order__info__card__icon"></div>
-
-        <p>Annual Plan</p>
-        <p>$59.99/year</p>
-
-        <button class="order__info__card__btn">Change</button>
       </div>
+      <div class="order__info">
 
-      <div class="order__info__actions">
-        <button class="order__info__actions__btn--submit">
-          Proceed to Payment
-        </button>
-        <button class="order__info__actions__btn--cancel">
-          Cancel Order
-        </button>
+        <h1 class="order__info__title">Order Summary</h1>
+
+        <p class="order__info__description">
+          You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!
+        </p>
+
+        <div class="order__info__card">
+          <div class="order__info__card__icon"></div>
+
+          <p>Annual Plan</p>
+          <p>$59.99/year</p>
+
+          <button class="order__info__card__btn">Change</button>
+        </div>
+
+        <div class="order__info__actions">
+          <button class="order__info__actions__btn--submit">
+            Proceed to Payment
+          </button>
+          <button class="order__info__actions__btn--cancel">
+            Cancel Order
+          </button>
+        </div>
       </div>
     </div>
   </div>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/alex-castelo" target="_blank">Àlex Castelo Martínez</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
