Finish mobile implementation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="order__info">
 
-        <h1 class="order__info__title">Order Summary</h1>
+        <h2 class="order__info__title">Order Summary</h2>
 
         <p class="order__info__description">
           You can now listen to millions of songs, audiobooks, and podcasts on any
@@ -28,10 +28,13 @@
         </p>
 
         <div class="order__info__card">
-          <div class="order__info__card__icon"></div>
 
-          <p>Annual Plan</p>
-          <p>$59.99/year</p>
+          <img class="order__info__card__icon" alt="Music logo icon" src="./images/icon-music.svg"></img>
+
+          <div class="order__info__card__price">
+            <p class="order__info__card__price__plan">Annual Plan</p>
+            <p class="order__info__card__price__amount"">$59.99/year</p>
+          </div>
 
           <button class="order__info__card__btn">Change</button>
         </div>
