--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <div class="content">
+  <main class="content">
 
     <div class="order">
       <div class="order__hero">
@@ -50,12 +50,12 @@
           </div>
         </div>
       </div>
-    </div>
+  </main>
 
-    <footer class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://github.com/alex-castelo" target="_blank">Àlex Castelo Martínez</a>.
-    </footer>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/alex-castelo" target="_blank">Àlex Castelo Martínez</a>.
+  </footer>
 
 </body>
 
