--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="order__info">
 
-        <h2 class="order__info__title">Order Summary</h2>
+        <h1 class="order__info__title">Order Summary</h1>
 
         <p class="order__info__description">
           You can now listen to millions of songs, audiobooks, and podcasts on any
@@ -34,7 +34,7 @@
 
           <div class="order__info__card__price">
             <p class="order__info__card__price__plan">Annual Plan</p>
-            <p class="order__info__card__price__amount"">$59.99/year</p>
+            <p class="order__info__card__price__amount">$59.99/year</p>
           </div>
 
           <button class=" order__info__card__btn">Change</button>
